Solved some todos

--- a/doc/intro.tex
+++ b/doc/intro.tex
@@ -5,7 +5,7 @@ In particolare, lo scopo che ci prefiggiamo è quello di addestrare una rete neu
 	\item Non richieda, per quanto possibile, risorse computazionali eccessive, dal momento che per l'addestramento sarà utilizzata la piattaforma Google Colab\footnote{\url{https://colab.research.google.com/}}, che offre potenza computazionale limitata e permette l'accesso alle sue risorse per un massimo di 12 ore consecutive, per poi sottoporre l'utente ad un ban temporaneo.
 	\item \label{sec:intro.intention}Sia robusta rispetto a corruzioni che possono verificarsi su immagini acquisite con un'intenzione simile a quella con la quale sono state acquisite le immagini presenti nel dataset.
 Essendo le immagini nel dataset immagini di celebrità recuperate su Google Immagini \cite{vggface2dataset}, si assumerà come intenzione quella di un fotografo che vuole realizzare uno scatto di un soggetto più o meno collaborativo.
-	\item Sia implementata con il framework Keras.\todo{aggiungere motivazioni}
+	\item Sia implementata con il framework Keras, in quanto ci è più familiare, e questo ci permette di concentrarci sul modello senza dover spendere troppo tempo ad apprendere nuove tecniche implementative.
 \end{itemize}
 
 Il codice per l’addestramento e il test della rete realizzata nell’ambito di questo progetto è consultabile sulla nostra repository GitHub\footnote{\url{https://github.com/MicheleOliva/Contest-Vision-2020}}.
